--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,15 +179,15 @@ jobs:
           cp platform-build/MassaAndroid.tar.gz packages/massa_flutter/android/$CURR_VERSION.tar.gz
           echo Copied file!
 
-      - name: Run Flutter integration tests
-        uses: Wandalen/wretry.action@master # sometimes android tests are flaky
-        with:
-          attempt_limit: 5
-          action: reactivecircus/android-emulator-runner@v2
-          with: |
-            api-level: 33
-            target: google_apis
-            arch: x86_64
-            ram-size: 1024M
-            disk-size: 2048M
-            script: cd packages/massa_flutter/example && flutter test -d `flutter devices | grep android | tr ' ' '\n' | grep emulator-` integration_test
+      #- name: Run Flutter integration tests
+      #  uses: Wandalen/wretry.action@master # sometimes android tests are flaky
+      #  with:
+      #    attempt_limit: 5
+      #    action: reactivecircus/android-emulator-runner@v2
+      #    with: |
+      #      api-level: 33
+      #      target: google_apis
+      #      arch: x86_64
+      #      ram-size: 1024M
+      #      disk-size: 2048M
+      #      script: cd packages/massa_flutter/example && flutter test -d `flutter devices | grep android | tr ' ' '\n' | grep emulator-` integration_test
