--- a/packages/massa_flutter/pubspec.yaml
+++ b/packages/massa_flutter/pubspec.yaml
@@ -18,8 +18,8 @@ dev_dependencies:
   ffigen: ^6.1.2
   flutter_test:
     sdk: flutter
-  integration_test:
-    sdk: flutter
+  #integration_test:
+  #  sdk: flutter
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
