--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,9 @@ jobs:
           components: rustfmt, clippy
 
       # Rust
-      #- name: Check Rust format
-      #  working-directory: ./packages/massa/native/src
-      #  run: rustfmt --check lib.rs
+      - name: Check Rust format
+        working-directory: ./packages/massa/native/src
+        run: rustfmt --check lib.rs
       - name: Rust code analysis
         run: cargo clippy -- -D warnings
       - name: Run Rust tests
@@ -36,15 +36,15 @@ jobs:
         run: cargo build -r
 
       # Dart/Flutter
-      #- name: Check Dart format
-      #  run: melos run check-format --no-select
-      #- name: Dart code analysis
-      #  run: melos run analyze --no-select
-      #- name: Run Dart tests
-      #  uses: Wandalen/wretry.action@master # sometimes stream tests are flaky
-      #  with:
-      #    command: melos run test
-      #    attempt_limit: 5
+      - name: Check Dart format
+        run: melos run check-format --no-select
+      - name: Dart code analysis
+        run: melos run analyze --no-select
+      - name: Run Dart tests
+        uses: Wandalen/wretry.action@master # sometimes stream tests are flaky
+        with:
+          command: melos run test
+          attempt_limit: 5
 
   macos_integration_test:
     runs-on: macos-latest
