--- a/.github/workflows/combine-prs.yaml
+++ b/.github/workflows/combine-prs.yaml
@@ -109,7 +109,7 @@ jobs:
       - uses: bluefireteam/melos-action@v2
       - run: |
           cargo build -r
-          git config --global user.name 'MimirActionsBot'
-          git config --global user.email 'mimiractionsbot@users.noreply.github.com'
+          git config --global user.name 'MassaActionsBot'
+          git config --global user.email 'Massaactionsbot@users.noreply.github.com'
           git commit -am "chore: update generated files"
           git push
