--- a/packages/massa/pubspec.yaml
+++ b/packages/massa/pubspec.yaml
@@ -1,18 +1,19 @@
 name: massa
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/jwmdev/massa-dart
+homepage: https://bits.africa
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  ffi: ^2.0.1
+  flutter_rust_bridge: ^1.64.0
+  meta: ^1.9.0
 
 dev_dependencies:
   ffigen: ^7.2.6
   lints: ^2.0.0
   test: ^1.21.0
-dependencies:
-  ffi: ^2.0.1
-  flutter_rust_bridge: ^1.64.0
+
