--- a/packages/massa_flutter/pubspec.yaml
+++ b/packages/massa_flutter/pubspec.yaml
@@ -1,7 +1,8 @@
 name: massa_flutter
 description: Massa flutter package for developing flutter apps that can easily interact with Massa blockchain.
-version: 0.0.1
-homepage:
+version: 1.0.0
+repository: https://github.com/jwmdev/massa-dart
+homepage: https://bits.africa
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
