--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -34,20 +34,18 @@ jobs:
           files: platform-build/*
 
   publish_pub_release:
-    needs: publish_github_release
+    # Modified from dart-lang/setup-dart/.github/workflows/publish.yml@7361df6
     runs-on: ubuntu-latest
+    needs: publish_github_release
+    permissions:
+      id-token: ${{ secrets.PUB_CRED_JSON }} # this is required for requesting the JWT
 
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
       - uses: bluefireteam/melos-action@v2
-      - name: Setup pub.dev credentials
-        run: |
-          mkdir -p $HOME/.config/dart
-          cat << EOF > $HOME/.config/dart/pub-credentials.json
-          ${{ secrets.PUB_CRED_JSON }}
-          EOF
+
       - name: Dry-run publish to pub.dev
         run: melos publish -y --dry-run
       - name: Publish to pub.dev
-        run: melos publish -y --no-dry-run  run: melos publish -y --no-dry-run
+        run: melos publish -y --no-dry-run
