--- a/packages/massa_flutter/example/pubspec.yaml
+++ b/packages/massa_flutter/example/pubspec.yaml
@@ -54,6 +54,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+  integration_test:
+    sdk: flutter
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
