--- a/packages/massa/pubspec.yaml
+++ b/packages/massa/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   ffi: ^2.0.1
   flutter_rust_bridge: ^1.64.0
   meta: ^1.8.0
+  retry: ^3.1.0 
+  http: ^0.13.5
 
 dev_dependencies:
   ffigen: ^7.2.6
