--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,22 +19,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
       - uses: bluefireteam/melos-action@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          components: rustfmt, clippy
-
-      # Rust
-      - name: Check Rust format
-        working-directory: ./packages/massa/native/src
-        run: rustfmt --check lib.rs
-      - name: Rust code analysis
-        run: cargo clippy -- -D warnings
-      - name: Run Rust tests
-        run: cargo test
-      - name: Build Rust code (massa) for Dart tests
-        run: cargo build -r
-
+  
       # Dart/Flutter
       - name: Check Dart format
         run: melos run check-format --no-select
@@ -112,17 +97,9 @@ jobs:
         with:
           toolchain: stable
 
-      - name: Build the binaries
-        run: melos run build:other
-      - name: Copy the binaries to the needed location
-        run: |
-          CURR_VERSION=massa-v`awk '/^version: /{print $2}' packages/massa/pubspec.yaml`
-          cp platform-build/Massa.tar.gz packages/massa_flutter/linux/$CURR_VERSION.tar.gz
-          echo Copied file!
-
-      #- name: Run Flutter integration tests
-      #  working-directory: packages/massa_flutter/example
-      #  run: flutter test -d linux integration_test
+      - name: Run Flutter integration tests
+        working-directory: packages/massa_flutter/example
+        run: flutter test -d linux integration_test
 
   ios_integration_test:
     runs-on: macos-latest
@@ -141,17 +118,9 @@ jobs:
           echo "DEVICE_ID=$DEVICE_ID" >> $GITHUB_ENV
           xcrun simctl boot $DEVICE_ID
 
-      - name: Build the XCFramework
-        run: melos run build:apple
-      - name: Copy the XCFramework to the needed location
-        run: |
-          CURR_VERSION=massa-v`awk '/^version: /{print $2}' packages/massa/pubspec.yaml`
-          cp platform-build/Massa.xcframework.zip packages/massa_flutter/ios/Frameworks/$CURR_VERSION.zip
-          echo Copied file!
-
-      #- name: Run Flutter integration tests
-      #  working-directory: packages/massa_flutter/example
-      #  run: flutter test -d ${{ env.DEVICE_ID }} integration_test
+      - name: Run Flutter integration tests
+        working-directory: packages/massa_flutter/example
+        run: flutter test -d ${{ env.DEVICE_ID }} integration_test
 
   android_integration_test:
     runs-on: macos-latest
@@ -171,23 +140,15 @@ jobs:
           distribution: zulu
           java-version: "11.x"
 
-      - name: Build the binaries
-        run: melos run build:android
-      - name: Copy the binaries to the needed location
-        run: |
-          CURR_VERSION=massa-v`awk '/^version: /{print $2}' packages/massa/pubspec.yaml`
-          cp platform-build/MassaAndroid.tar.gz packages/massa_flutter/android/$CURR_VERSION.tar.gz
-          echo Copied file!
-
-      #- name: Run Flutter integration tests
-      #  uses: Wandalen/wretry.action@master # sometimes android tests are flaky
-      #  with:
-      #    attempt_limit: 5
-      #    action: reactivecircus/android-emulator-runner@v2
-      #    with: |
-      #      api-level: 33
-      #      target: google_apis
-      #      arch: x86_64
-      #      ram-size: 1024M
-      #      disk-size: 2048M
-      #      script: cd packages/massa_flutter/example && flutter test -d `flutter devices | grep android | tr ' ' '\n' | grep emulator-` integration_test
+      - name: Run Flutter integration tests
+        uses: Wandalen/wretry.action@master # sometimes android tests are flaky
+        with:
+          attempt_limit: 5
+          action: reactivecircus/android-emulator-runner@v2
+          with: |
+            api-level: 33
+            target: google_apis
+            arch: x86_64
+            ram-size: 1024M
+            disk-size: 2048M
+            script: cd packages/massa_flutter/example && flutter test -d `flutter devices | grep android | tr ' ' '\n' | grep emulator-` integration_test
