--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -2,19 +2,7 @@ version: 2
 enable-beta-ecosystems: true
 updates:
   - package-ecosystem: pub
-    directory: "/packages/massa"
+    directory: "/"
     versioning-strategy: increase # https://github.com/dependabot/dependabot-core/issues/6446
-    schedule:
-      interval: weekly
-  - package-ecosystem: pub
-    directory: "/packages/massa/example"
-    schedule:
-      interval: weekly
-  - package-ecosystem: pub
-    directory: "/packages/massa_flutter"
-    schedule:
-      interval: weekly
-  - package-ecosystem: pub
-    directory: "/packages/massa_flutter/example"
     schedule:
       interval: weekly
