--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,14 @@ environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
-  ffi: ^2.0.1
-  flutter_rust_bridge: ^1.64.0
-  meta: ^1.8.0
+  base_codecs: ^1.0.1 # base_codecs support base16, base32, base58 and base85
+  bip340: ^0.0.4
+  cryptography: ^2.0.5
+  thirds: ^0.2.0-alpha.1
+  hex: ^0.2.0
   retry: ^3.1.0 
   http: ^0.13.5
+
 
 dev_dependencies:
   ffigen: ^7.2.6
