--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ repository: https://github.com/jwmdev/massa-dart
 homepage: https://bits.africa
 
 environment:
-  sdk: '>=2.19 <3.0.0'
+  sdk: '>=2.19.0<3.0.0'
 
 dependencies:
   base_codecs: ^1.0.1 # base_codecs support base16, base32, base58 and base85
@@ -19,4 +19,5 @@ dependencies:
 
 dev_dependencies:
   lints: ^2.0.0
+  melos: ^3.0.0
   test: ^1.21.0
