improved release workflow

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -24,7 +24,7 @@ jobs:
           fetch-depth: 0
       - name: Setup git
         run: |
-          git config user.name "MassaActionsBot"
+          git config user.name "Joseph W. Matiko"
           git config user.email "dev.jwm@gmail.com"
       - uses: subosito/flutter-action@v2
       - uses: bluefireteam/melos-action@v2
