--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       # Setup
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
-      - uses: bluefireteam/melos-action@v2
+      #- uses: bluefireteam/melos-action@v2
   
       # Dart/Flutter
       - name: Check Dart format
