--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -27,7 +27,7 @@ jobs:
           git config user.name "Joseph W. Matiko"
           git config user.email "dev.jwm@gmail.com"
       - uses: subosito/flutter-action@v2
-      #- uses: bluefireteam/melos-action@v2
+      - uses: bluefireteam/melos-action@main
 
       - name: Create the new version(s)
         run: melos version --yes ${{ inputs.version_parameters }}
