--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
   retry: ^3.1.0 
   http: ^0.13.5
   web_socket_channel: ^2.3.0
+  protobuf: ^2.1.0
+  fixnum: ^1.1.0
+  grpc: ^3.1.0
+  http2: ^2.0.1
 
 
 dev_dependencies:
