--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,6 +3,10 @@ analyzer:
   exclude:
     - '**.freezed.dart'
     - '**.g.dart'
+    - '**.pb.dart'
+    - '**.pbenum.dart'
+    - '**.pbjson.dart'
+    - '**.pbgrpc.dart'
   language:
     strict-inference: true
     strict-raw-types: true
