--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,22 @@
 name: massa
 description: Massa package  is an SDK that connects your Dart and Flutter applications to the Massa blockchain, create wallet, send transactions, and work with smart contracts.
-version: 1.5.1
+version: 1.6.0
 repository: https://github.com/jwmdev/massa-dart
 homepage: https://bits.africa
 
 environment:
-  sdk: '>=3.0.0<4.0.0'
+  sdk: ">=3.0.0<4.0.0"
 
 dependencies:
   base_codecs: ^1.0.1 # base_codecs support base16, base32, base58 and base85
   cryptography: ^2.0.5
   pointycastle: ^3.6.2
   hex: ^0.2.0
-  retry: ^3.1.0 
+  retry: ^3.1.0
   protobuf: ^3.0.0
   fixnum: ^1.1.0
   grpc: ^3.1.0
   http2: ^2.0.1
-
 
 dev_dependencies:
   lints: ^2.0.0
