--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
   protobuf: ^3.0.0
   fixnum: ^1.1.0
   grpc: ^3.1.0
-  http2: ^2.0.1
+  http: ^1.1.2
 
 dev_dependencies:
-  lints: ^2.0.0
+  lints: ^3.0.0
   melos: ^3.1.1
   test: ^1.21.0
